k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-streaming
  labels:
    app: movie-streaming
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-streaming
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: movie-streaming
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8085"
    spec:
      containers:
        - name: movie-streaming
          image: __IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 10
