k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-streaming
  labels:
    app: movie-streaming
spec:
  selector:
    app: movie-streaming
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
